Update Part 5 Recycler View

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WIA2007_ZeroHunger"
         tools:targetApi="31">
+        <activity
+            android:name=".Part5.MainActivityPart5S9a"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
